fix: Make checkboxes more visible on wayland.

--- a/themes/default/window/general.css
+++ b/themes/default/window/general.css
@@ -65,6 +65,7 @@ QMessageBox
 QCheckBox
 {
     color: black;
+    background-color: #fcfcfc;
 }
 
 QCheckBox:disabled
